@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-2796: Option for onAfterClass to run after @AfterClass
 Fixed: GITHUB-2857: XmlTest index is not set for test suites invoked with YAML
 
 7.7.1
